SERVER-60030 Fix group stage builder bugs